resources/app-sre-stage/rhelemeter-stage/rhelemeter-server.route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  annotations:
    cert-manager.io/issuer-kind: ClusterIssuer
    cert-manager.io/issuer-name: letsencrypt-prod-http
  name: rhelemeter-server
spec:
  host: rhelemeter.api.stage.openshift.com
  port:
    targetPort: external
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: reencrypt
  to:
    kind: Service
    name: rhelemeter-server
    weight: 100
  wildcardPolicy: None
